@@ -130,7 +130,7 @@ namespace OpenBabel
     void start_kekulize(std::vector <OBAtom*> &cycle, std::vector<int> &electron);
     int expand_kekulize(OBAtom *atom1, OBAtom *atom2, std::vector<int> &currentState, std::vector<int> &initState, std::vector<int> &bcurrentState, std::vector<int> &binitState, std::vector<bool> &mark);
     int getorden(OBAtom *atom);
-    void expandcycle(OBAtom *atom, OBBitVec &avisit);
+    bool expandcycle(OBAtom *atom, OBBitVec &avisit, OBAtom *first = NULL, int depth = 0);
     //@}
 
   public:
